--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
-    git study
-    frist modify
+    <div id="nav">
+
+        git study frist modify
+
+    </div>
+
 </body>
 
 </html>
